--- a/.gitignore
+++ b/.gitignore
@@ -1,98 +1,12 @@
+node_modules
+dist
+.env
+.npm/
+# MacOS files
+.DS_Store
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
-.pnpm-debug.log*
-
-# Diagnostic reports
-report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage
-coverage
-*.lcov
-.nyc_output
-
-# Output directories
-dist/
-build/Release
-
-# Dependency directories
-node_modules/
-jspm_packages/
-bower_components
-web_modules/
-
-# TypeScript
-*.tsbuildinfo
-
-# Caches
-.cache/
-.parcel-cache
-.temp
-.vuepress/dist
-.vitepress/dist
-.vitepress/cache
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
-
-# Linters
-.eslintcache
-.stylelintcache
-
-# Misc
-.lock-wscript
-.node_repl_history
-*.tgz
-.yarn-integrity
-.yarn/cache
-.yarn/unplugged
-.yarn/build-state.yml
-.yarn/install-state.gz
-.pnp.*
-
-# Env files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Serverless
-.serverless/
-
-# Docusaurus
-.docusaurus
-
-# DynamoDB
-.dynamodb/
-
-# TernJS
-.tern-port
-
-# VSCode / JetBrains
-.vscode/
-.idea/
-.vscode-test
-
-# Prisma + SQLite
-prisma/dev.db
-prisma/dev.db-journal
-
-# Jest
-coverage/
-jest.config.js
-
-# Docker overrides
-*.local
-docker-compose.override.yml
