--- a/package.json
+++ b/package.json
@@ -1,38 +1,52 @@
 {
-  "name": "express-ts-prisma",
+  "name": "devices-api",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
-    "build": "rimraf ./dist && npx tsc",
-    "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts"
+    "build": "tsc && tsc-alias",
+    "start": "node dist/main/server.js",
+    "dev": "ts-node-dev --respawn --transpile-only --require tsconfig-paths/register src/main/server.ts",
+    "test": "cross-env NODE_ENV=test jest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vcantelli/devices-api.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/vcantelli/devices-api/issues"
+  },
+  "homepage": "https://github.com/vcantelli/devices-api#readme",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^5.18.0",
-    "argon2": "^0.40.3",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "uuid": "^10.0.0",
-    "winston": "^3.14.0",
-    "zod": "^3.23.8"
+    "@prisma/client": "^6.7.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
-    "@types/argon2": "^0.15.0",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^22.1.0",
-    "@types/uuid": "^10.0.0",
-    "@types/winston": "^2.4.4",
-    "concurrently": "^8.2.2",
-    "nodemon": "^3.1.4",
-    "prisma": "^5.18.0",
-    "rimraf": "^6.0.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.15.3",
+    "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "prisma": "^6.7.0",
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.2",
+    "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.15",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.8.3"
   }
 }
